--- a/Front page.html
+++ b/Front page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>RUBEX</title>
+  <title>Website</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -169,7 +169,7 @@ button{
                 <span class="icon-bar"></span>
             </button>
             <img src="rubex_mini.png" ></img>
-            <a id="title"class="navbar-brand" href="#page-top">RUBEX</a>
+            <a id="title"class="navbar-brand" href="#page-top">Model site</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
