--- a/Front page.html
+++ b/Front page.html
@@ -348,7 +348,7 @@ button{
  })
   });
 
-/*CODE FOR FORM VALIDATION WITHIN DIALOG BOX*/
+/* FORM VALIDATION WITHIN DIALOG BOX */
 
       function validate(){
             var x = document.getElementById("username").value;
