--- a/Front page.html
+++ b/Front page.html
@@ -90,7 +90,7 @@ section .section-title {
 }
 
 body{
-  background-color: beige;
+  background-color: black;
 }
 button{
     background-color: transparent;
