--- a/Front page.html
+++ b/Front page.html
@@ -257,7 +257,7 @@ button{
   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
     
-      <!-- Modal content-->
+      <!-- Dialog box-->
       <div class="modal-content">
         <div class="modal-header">
            <button type="button" class="close" id="mod_cls" data-dismiss="modal">&times;</button>
